fix: squashed info sections

--- a/src/components/About/about.module.css
+++ b/src/components/About/about.module.css
@@ -15,7 +15,7 @@
 }
 .image {
     width: 100%;
-    min-height: 500px;
+    min-height: 700px;
     height: 100%;
 }
 
